--- a/geneRemover/README
+++ b/geneRemover/README
@@ -3,3 +3,5 @@ geneRemover.src is designed to work with fasta files.
 geneRemoverBED.src is an adapted version of geneRemover.src to work with BED files.
 The programms takes an inputted string and copies the file, omitting any entries that contain the regex inputted.
 The input is expected to be inclosed in quotes and thefore the first and last remove characters are removed, i.e. input: "ERV", regex: ERV
+
+This program scans through a given fasta file and removes any entries with a user inputted literal string. This was used to remove repeat sequences from the repeatmasker fasta which were confounding results. 
